Adapt project structure to modena v2

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<link rel="icon" type="image/png" href="<%= asset('favicon.ico') %>">
+	<link rel="icon" type="image/png" href="/favicon.ico?$modena=vrokil">
 
 	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="/plugins/font-awesome-4.4.0/css/font-awesome.css" rel="stylesheet" type="text/css" />
-	<link href="<%= asset('css/style.css') %>" rel="stylesheet" type="text/css" />
+	<link href="/css/style.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="body-bg">	
@@ -23,7 +23,7 @@
 			    <span class="icon-bar black-bg"></span>
 			  </button>
 			  <a class="navbar-brand vrokil-brand">
-			  	<img src="images/normal-logo.png" class="medium-logo"/>
+			  	<img src="/images/normal-logo.png?$modena=vrokil" class="medium-logo"/>
 			  </a>
 			</div>
 			<div class="navbar-collapse collapse">
@@ -62,7 +62,7 @@
 						<div class="col-sm-4">
 							<div class="item-container vertical-aligner">
 								<div class="vertical-aligned">
-									<img class="col-sm-10 col-sm-offset-1 col-xs-12 img-responsive" src="images/oculus-rift.png"/>
+									<img class="col-sm-10 col-sm-offset-1 col-xs-12 img-responsive" src="/images/oculus-rift.png?$modena=vrokil"/>
 									<p class="m-top-50 text-justify col-xs-12">Milions de persones tindran accés a la realitat virtual a finals de 2015. Anticipa't i dóna a conèixer el teu espai a través d'una experiència sensorial única amb el nostre <b>Virtual Live Tour</b></p>
 								</div>								
 							</div>
@@ -70,7 +70,7 @@
 						<div class="col-sm-4 margin-col">
 							<div class="item-container vertical-aligner">
 								<div class="vertical-aligned">
-									<img class="col-xs-8 col-xs-offset-2 col-xs-12 img-responsive" src="images/24-7.png"/>
+									<img class="col-xs-8 col-xs-offset-2 col-xs-12 img-responsive" src="/images/24-7.png?$modena=vrokil"/>
 									<p class="m-top-50 text-justify col-xs-12">Ofereix als teus clients una visita on-line les 24 hores del dia sense concertar cites prèvies amb el nostre <b>3D Visit</b>, permetent-los passejar-se amb total llibertat pels teus espais</p>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 						<div class="col-sm-4">
 							<div class="item-container vertical-aligner">
 								<div class="vertical-aligned">
-									<img class="img-responsive" src="images/fly-through-video.png" style="margin-top: 45px;"/>
+									<img class="img-responsive" src="/images/fly-through-video.png?$modena=vrokil" style="margin-top: 45px;"/>
 									<p class="m-top-50 text-justify">Crea una visita guiada pel teu espai, remarcant els detalls que desitgis, en forma de video d'alta qualitat amb el nostre <b>Fly-Through</b></p>
 								</div>
 							</div>
@@ -148,7 +148,7 @@
 	    		<div class="col-xs-12 text-center black-text">
 	    			 El teu partner de realitat virtual 
 	    			<a href="javascript:;">
-	    				<img src="images/black-logo.png" class="small-logo" />
+	    				<img src="/images/black-logo.png?$modena=vrokil" class="small-logo" />
 	    			</a>
 	    			&copy; 2015 Vrokil
 	    		</div>
