--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="icon" type="image/png" href="/favicon.ico?$modena=vrokil">
 
-	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="/plugins/font-awesome-4.4.0/css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.min.css?$modena=vrokil" rel="stylesheet" type="text/css" />
+	<link href="/plugins/font-awesome-4.4.0/css/font-awesome.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 	<link href="/css/style.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 </head>
 
@@ -156,8 +156,8 @@
     	</div>
 	 </div>
 	 
-	<script src="/plugins/jquery-2.1.1/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="/plugins/bootstrap-3.2.0/js/bootstrap.min.js" type="text/javascript"></script>	
+	<script src="/plugins/jquery-2.1.1/jquery-2.1.1.min.js?$modena=vrokil" type="text/javascript"></script>
+    <script src="/plugins/bootstrap-3.2.0/js/bootstrap.min.js?$modena=vrokil" type="text/javascript"></script>	
 </body>
 
 </html>
