--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="icon" type="image/png" href="/favicon.ico?$modena=vrokil">
 
-	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.min.css?$modena=vrokil" rel="stylesheet" type="text/css" />
+	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 	<link href="/plugins/font-awesome-4.4.0/css/font-awesome.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 	<link href="/css/style.css?$modena=vrokil" rel="stylesheet" type="text/css" />
 </head>
